[package]
name = "bilibili-webhook"
version = "0.2.0"
authors = ["LJason <ljason@ljason77.com>"]
edition = "2024"
rust-version = "1.92"
readme = "README.md"
repository = "https://github.com/LJason77/bilibili-webhook"
keywords = ["bilibili", "download", "webhook"]
categories = ["command-line-utilities"]

[lints.clippy]
pedantic = "deny"
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
strip = "debuginfo"
codegen-units = 1
lto = "fat"
panic = "abort"

[dependencies]
bili_core = { version = "0.1", features = ["fav"] }
log = "0.4"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dependencies.log4rs]
version = "1"
default-features = false
features = ["console_appender", "rolling_file_appender", "compound_policy", "fixed_window_roller", "size_trigger", "config_parsing", "pattern_encoder", "yaml_format"]

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "0.1", features = ["override"] }
